# Hydra

./: .gitignore  404.html  README.md  beam_example.py  beam_example_utils.py  chain_mix.py  example.py  example_mpi.py  example_run.py  gcr_mpi.py  index.html  objects.inv  per_antenna_beam_example.py  power_beam_example.py  pyproject.toml  requirements.txt
.github/workflows/: jekyll-gh-pages.yml  python-package.yml
docs/: _config.yml  example.md  faq.md  heads.md  index.html  index.md
docs/api/: mkdocs.yml
docs/apidocs/: mkdocs.yml
docs/apidocs/docs/: example.md  index.md  linear_solver.md  ptsrc_sampler.md  region_sampler.md  sh_sampler.md  utils.md  vis_simulator.md
example/: index.html
hydra/: __init__.py  beam_sampler.py  config.py  cosmo_sampler.py  diffuse_sampler.py  example.py  gain_sampler.py  io.py  linear_solver.py  per_ant_beam_sampler.py  plot.py  power_beam_sampler.py  pspec_sampler.py  ptsrc_sampler.py  region_sampler.py  sh_sampler.py  sparse_beam.py  utils.py  vis_sampler.py  vis_simulator.py  vis_utils.py
hydra/tests/: test_example.py  test_gain_sampler.py  test_io.py  test_linear_solver.py  test_ptsrc_sampler.py  test_region_sampler.py  test_sh_sampler.py  test_vis_simulator.py
legacy/: example_run.py  old_example.py
notebooks/: Generate_validation_sims.ipynb
ptsrc_sampler/: index.html
region_sampler/: index.html
scripts/: beam_diagnostic.py  concatenate_uvh5.py  freqidx_select.py  generate_perturbed_beam.py  generate_slurm.py  minimal_antenna_set.py  per_antenna_beam_example.py  precompute_response_sh.py  precompute_response_sh_singlefreq.py  precompute_response_sh_singlefreq_general.py  precompute_response_sh_singlefreq_vivaldi.py  redundant_select.py  shortbls_select.py
search/: search_index.json
sh_sampler/: index.html
